# mpi-p2p-msg-pool

./: .gitignore  CMakeLists.txt  README.md  install_deps.sh
example/: CMakeLists.txt  example.cpp
src/: CMakeLists.txt  msg.cpp  msg.h  msg_meta.h  msg_pool.cpp  msg_pool.h  recv_msg_pool.h  send_msg_pool.h
test/: CMakeLists.txt  test_msg.cpp
